# evaluations_generative_ai

./: .env.example  LICENSE  README.md  config.toml.example  pyproject.toml
.github/workflows/: ci.yml
scripts/: analyze_parallel_usage.py  analyze_turn_distribution.py  filter_sut_losses.py
src/blob_storage/: __init__.py  client.py
src/common/: azure_openai.py  config.py  logger.py  version.py
src/datagen/: __init__.py  __main__.py  config.py  generate.py  generator.py  mcp_client.py  prompts.py
src/dataset/: sync.py
src/evaluation/: client.py  evaluators.py  json_evaluators.py  main.py  query_generator.py
src/evaluation/prompts/: __init__.py  answer_correctness.py  json_correctness.py  query_generation.py  response_quality.py
tests/: pytest_gevent_patch.py  test_blob_storage.py  test_config.py  test_json_evaluator_score.py
